[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaston"
version = "0.3.0"
description = "Python client for the Gaston API (transcription, translation and sentence search)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Streams s.r.o.", email = "contact@streams.guru" }]
keywords = ["gaston", "transcription", "translation", "speech-to-text", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://gaston.live"
Documentation = "https://www.gaston.live/en/api"
Source = "https://github.com/streams-sro/gaston-python"
Changelog = "https://github.com/streams-sro/gaston-python/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["gaston*"]

[tool.pytest.ini_options]
testpaths = ["tests"]